# rs-socket-activation-example

./: Cargo.toml  Makefile  sockact.service  sockact.socket
src/: main.rs
