[package]
name = "sockact"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.3.3", features = ["derive"] }
hyper = { version = "0.14", features = ["full"] }
systemd = "0.10"
tokio = { version = "1", features = ["full"] }
url = "2.4.0"
